# mcp-agent

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/worflows/: ci.yaml
.github/workflows/: ci.yaml
sql/: ddl.sql
src/agent_eval/: db_hook.py  server.py
src/agent_eval/tools/: compare.py  evaluate.py  metrics.py
tests/: test_compare_prompts.py  test_evaluate.py  test_log_evaluate.py  test_metrics.py
